fixed minor typo

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <h4>#22092c</h4>
       </div>
       <div class="rgb color-sec">
-        <h2>RBGA</h2>
+        <h2>RGBA</h2>
         <input type="text " />
         <h4>rgb(34,9,44)</h4>
       </div>
