Fixed the clearinput bug

--- a/index.html
+++ b/index.html
@@ -15,17 +15,17 @@
       <div class="hex color-sec">
         <h2>HEXA</h2>
         <input type="text" maxlength="9" ; />
-        <h4>#22092c</h4>
+        <h4 class="copy">#22092c</h4>
       </div>
       <div class="rgb color-sec">
         <h2>RGBA</h2>
         <input type="text " />
-        <h4>rgb(34,9,44)</h4>
+        <h4 class="copy">rgb(34,9,44)</h4>
       </div>
       <div class="hsl color-sec">
         <h2>HSLA</h2>
         <input type="text" />
-        <h4>hsl(282.86, 66.04%, 10.39%)</h4>
+        <h4 class="copy">hsl(282.86, 66.04%, 10.39%)</h4>
       </div>
     </section>
     <footer>
