Added the copy functionality

--- a/index.html
+++ b/index.html
@@ -16,16 +16,19 @@
         <h2>HEXA</h2>
         <input type="text" maxlength="9" ; />
         <h4 class="copy">#22092c</h4>
+        <span class="hidden">Copied!</span>
       </div>
       <div class="rgb color-sec">
         <h2>RGBA</h2>
         <input type="text " />
         <h4 class="copy">rgb(34,9,44)</h4>
+        <span class="hidden">Copied!</span>
       </div>
       <div class="hsl color-sec">
         <h2>HSLA</h2>
         <input type="text" />
         <h4 class="copy">hsl(282.86, 66.04%, 10.39%)</h4>
+        <span class="hidden">Copied!</span>
       </div>
     </section>
     <footer>
